style.css
@font-face {
    font-family: fillFont;
    src: url("Fonts/OstrichSans-Light.otf");
    font-size: 50vh;
}

@font-face {
	font-family: mainFont;
    src: url("Fonts/OstrichSans-Medium.otf");
    font-size: 50vh;
}

@font-face {
	font-family: titleFont;
    src: url("Fonts/OstrichSans-Medium.otf");
    font-size: 50vh;
}


body {
	

  font-family: mainFont;
	height:100vh;
	/***  CSS Gradient  ***/
  /*  Chrome 1-9 and Safari 4-5.0  */
  background-image: -webkit-gradient(linear, left top, left bottom,
        color-stop( 0.0, #ecbb59 ),
        color-stop( 1.0, #ffffff ));

  /*  Chrome 10+ Safari 5.1+ Mobile Safari  */
  background-image: -webkit-linear-gradient(top,
        #ecbb59, 
        #ffffff );

  /*  Firefox 3.6+  */
  background-image: -moz-linear-gradient(top,
        #ecbb59, 
        #ffffff );

  /*  IE 10+  */
  background-image: -ms-linear-gradient(top,
        #ecbb59, 
        #ffffff );

  /*  Opera 11.10+  */
  background-image: -o-linear-gradient(top,
        #ecbb59, 
        #ffffff );

  /*  W3C  */
  background-image: linear-gradient(top,
        #ecbb59, 
        #ffffff );
}

#centerBox {
	position: fixed;

  background-color:#fff;
	padding:5px;
	width: 20%;
	min-width:200px;
  font-size: 3.5vh;
	
	margin-left: 50vw;
	margin-top:50vh;
	border-radius: 5px;
	transform: translate(-50%, -50%);
	-webkit-box-shadow: 0px 0px 43px -17px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 43px -17px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 43px -17px rgba(0,0,0,0.75);
}

#centerBox h3 {
	text-align: center;
	font-family: titleFont;
  margin-top: 5px;
    /*transform: translate(0px, -50px);*/
}

input[type=text], select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    font-size: 2vh;
}

input, select, textarea, button{
	font-family:inherit;
}

input[type=submit] {
    width: 100%;
    background-color: #4CAF50;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

input[type=submit]:hover {
    background-color: #45a049;
}

